--- a/templates/machine_detail.html
+++ b/templates/machine_detail.html
@@ -32,7 +32,7 @@ Cortadora Max Müller
             <div class="footer-item glow-text">
                 <a 
                     href="{{ url_for('static', filename='machines/tpm/TPM - Cortadora Max Müller - L3.pdf') }}" 
-                    download 
+                    target="_blank"
                     style="color:inherit; text-decoration:none;"
                 >
                     TPM
