--- a/templates/machine_heading.html
+++ b/templates/machine_heading.html
@@ -49,7 +49,7 @@ Máquinas
     cursor: pointer;
   }
   button:hover {
-    background: rgba(255,255,255,0.2);
+    background: transparent;
   }
   .edit-input {
     width: 100%;
