--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,7 @@
     <!-- Hoja de estilos principal -->
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
-<body>
-
+<body style="overflow-y: scroll;">
     <!-- 
         Encabezado (imágenes y menú).
         Se oculta inicialmente (solo para la página de inicio con video).
